namespace TicTacToe.Models;

public enum Symbol : byte
{
    X,
    O
}