@startuml
'https://plantuml.com/ru/class-diagram

enum Symbol {
    X
    O
}

class Cell {
    int Row
    int Column
}

class Move {
    Cell Cell
    Symbol Symbol
}

class Field {
    - Symbol?[] _symbols
    + Apply(move)
    + IEnumerable<Cell> GetEmptyCells()
    + IEnumerable<IEnumerable<Symbol?>> GetAllLines()
}

interface IPlayer {
    Symbol symbol
    Move(field)
}

class OPlayer {
}

class XPlayer {
}

class Game {
    - Field field
    - XPlayer xPlayer
    - OPlayer oPlayer
    + GameState State
    + IPlayer CurrentPlayer
     + Move NextMove()
        - Symbol GetWinner()
        - bool IsDraw()
}

Move --> Symbol
Move --> Cell
Field o-- Symbol
Field ..> Move
XPlayer ..|> IPlayer
OPlayer ..|> IPlayer
IPlayer --> Move
Game ..> Field
Game --> XPlayer
Game --> OPlayer

@enduml